# configs

./: vscode.json
dotnet/: .editorconfig  Directory.Build.props  Directory.Packages.props
dotnet/.claude/: instructions.md
dotnet/.claude/skills/: clean-architecture.md  follow-up.instructions.md  testing.md
rust/: Cargo.toml
svelte/: .prettierrc  eslint.config.js
svelte/.claude/: instructions.md
svelte/.claude/skills/: follow-up.instructions.md  tailwind-v4.md
svelte/.claude/skills/tailwind-v4-references/: dark-mode.md  patterns.md
