[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Error handling
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
unreachable = "warn"

# Code quality
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Security
lossy_float_literal = "warn"
mem_forget = "warn"
multiple_inherent_impl = "warn"
rest_pat_in_fully_bound_structs = "warn"
rc_buffer = "warn"
rc_mutex = "warn"

# Strings
string_to_string = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"

# Performance
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
large_futures = "warn"
large_stack_arrays = "warn"

# Async
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
